Bill holds and failed payment integrations

--- a/source/includes/_introduction.md.erb
+++ b/source/includes/_introduction.md.erb
@@ -24,6 +24,8 @@ Here you will find information on how to integrate with and use the Unbill API. 
 
 The Unbill API uses standard HTTP [verbs](http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html) to communicate and HTTP [response codes](http://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html) to indicate status and errors. All responses come in standard [JSON](http://www.json.org/). The Unbill API is served over HTTPS to ensure data privacy; HTTP is not supported. Every request must include your `unbillKey`.
 
+![Overview](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/overview.jpeg)
+
 ## Gaining Access
 
 To gain access to the Unbill API, please [fill out this form](https://unbill.typeform.com/to/oEBbt1). After our review process is complete, you'll be provided with an `unbillKey` which you can use for your requests.
