--- a/source/includes/api/bill/_detail.md.erb
+++ b/source/includes/api/bill/_detail.md.erb
@@ -72,6 +72,8 @@
 
 Gets details about a bill including outstanding balance, due date, status, and payment history.
 
+![Detail](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/detail.jpeg)
+
 ### HTTP Request
 
 `POST <%= config.host %>/bill/detail`
