--- a/source/includes/api/bill/_overview.md.erb
+++ b/source/includes/api/bill/_overview.md.erb
@@ -62,6 +62,8 @@
 
 Retrieves a list of bills for a specific user.
 
+![Overview](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/overview.jpeg)
+
 ### HTTP Request
 
 `POST <%= config.host %>/bill/overview`
