--- a/source/includes/api/bill/_status.md.erb
+++ b/source/includes/api/bill/_status.md.erb
@@ -96,6 +96,8 @@ A bill `status` can be a variety of types. Each type is documented below with a 
 
 There is no available bill balance at the moment. When a bill is first authenticated its status is `syncing` until a bill balance is retrieved. This typically takes no longer than 24 hours.
 
+![Bill Syncing](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/bill-syncing.png)
+
 ### overdue
 
 There is currently a bill balance with a due date that is in the past and needs to be paid as soon as possible. A bill is typicallly overdue when:
@@ -104,24 +106,36 @@ There is currently a bill balance with a due date that is in the past and needs 
 - `autopay` is enabled and the user has no payment method or a payment method on hold.
 - `autopay` is disabled and a payment has not been scheduled via the `/payment/make` endpoint.
 
+![Bill Overdue](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/bill-overdue.png)
+
 ### authenticate
 
 The user's credentials no longer work with the company's website and need to be reauthenticated. Make a request to the `/auth` endpoint with updated credentials received from your user to remove this status.
+
+![Bill Authenticate](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/bill-authenticate.png)
 
 ### hold 
 
 For a number of reasons a bill can have the status of `hold`. When a bill is on hold we'll present you with a `reason` that you in turn can present to your users. To remove this status, the user must complete whatever needs to be done with their online account as described in the `reason`.
 
-TODO: Allow for immediate bill hold removal
+![Bill Hold](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/bill-hold.png)
+
+You can also allow your user's to manually fix their bill holds in your app by making a request to the `/bill/fix-hold` endpoint.
 
 ### upcoming
 
 The user has an outstanding balance on their account that will be paid in the future.
 
+![Bill Upcoming](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/bill-upcoming.png)
+
 ### pending
 
 The user has an outstanding balance that will be paid in the next 24 hours.
 
+![Bill Pending](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/bill-pending.png)
+
 ### paid
 
 The user has no outstanding balance and has a last paid amount on their account.
+
+![Bill Paid](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/bill-paid.png)
