--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -13,6 +13,7 @@ includes:
   - api/bill/status
   - api/bill/detail
   - api/bill/overview
+  - api/bill/fix-hold
   - api/company/index
   - api/company/object
   - api/company/logos
@@ -21,9 +22,12 @@ includes:
   - api/payment/index
   - api/payment/card-object
   - api/payment/bank-object
+  - api/payment/object
+  - api/payment/status
   - api/payment/add
-  - api/payment/autopay
   - api/payment/get
+  - api/payment/retry
+  - api/payment/autopay
   - api/payment/make
   - api/user/index
   - api/user/create
