--- a/source/stylesheets/_variables2.scss
+++ b/source/stylesheets/_variables2.scss
@@ -32,7 +32,7 @@ $tg-gold: #FFCE89;
 $tg-blue: #2FA0DC;
 $tg-bermuda-green: #7be3bd;
 $base-grey-10: #f4f4f5;
-$base-grey-5: #FAFAFA;
+$base-grey-5: #FBFCFB;
 $base-grey-30: #e2e6e8;
 $base-grey-70: #a4aeb3;
 $white: #ffffff;
@@ -74,7 +74,7 @@ $lang-select-pressed-text: $white; // color of language tab text when mouse is p
 
 // SIZES
 ////////////////////
-$nav-width: 250px; // width of the navbar
+$nav-width: 260px; // width of the navbar
 $examples-width: 50%; // portion of the screen taken up by code examples
 $logo-margin: 20px; // margin between nav items and logo, ignored if search is active
 $main-padding: 28px; // padding to left and right of content & examples
