Grammer updates :ftw:

--- a/source/includes/api/bill/_object.md.erb
+++ b/source/includes/api/bill/_object.md.erb
@@ -17,9 +17,9 @@ Attribute | Description
 --------- | -----------
 `balance` | Current bill balance.
 `dueDate` | Current bill due date.
-`lastPaidAmount` | Amount of last made payment.
-`lastPaidOn` | Date of when the last payment was made.
+`lastPaidAmount` | Amount of last payment.
+`lastPaidOn` | Date of last payment.
 `status` | Status of the bill. Possible values are `syncing`, `overdue`, `authenticate`, `hold`, `upcoming`, `pending`, `paid`.
 `reason` | Reason the bill is on hold.
 `settings` | Settings for a bill.
-`settings.autopay` | Whether or not this bill is to be paid automatically.
+`settings.autopay` | Whether or not payments are scheduled automatically.
