--- a/source/includes/api/bill/_overview.md.erb
+++ b/source/includes/api/bill/_overview.md.erb
@@ -1,4 +1,4 @@
-## Bill overview
+## List all bills
 
 > Sample Request
 
@@ -60,9 +60,9 @@
 }
 ```
 
-Retrieves a list of bills for a specific user.
+Retrieves a list of user's bills.
 
-![Overview](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/overview.jpeg)
+![Overview](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/overview.png)
 
 ### HTTP Request
 
