--- a/source/includes/api/payment/_get.md.erb
+++ b/source/includes/api/payment/_get.md.erb
@@ -18,7 +18,8 @@
     "brand": "american express",
     "type": "credit",
     "expDate": "2019-06-01T12:00:00.000Z"
-  }
+  },
+  "status": "verified"
 }
 ```
 
@@ -30,7 +31,8 @@
     "routingNumber": "XXXX0002",
     "accountNumber": "XXXX0021s",
     "type": "checking"
-  }
+  },
+  "status": "verified"
 }
 ```
 
@@ -42,7 +44,7 @@
 }
 ```
 
-Retrieve the payment method on file for an Unbill user.
+Retrieve the payment method on file for a user.
 
 ### HTTP Request
 
