--- a/source/includes/api/bill/_detail.md.erb
+++ b/source/includes/api/bill/_detail.md.erb
@@ -70,9 +70,9 @@
 }
 ```
 
-Gets details about a bill including outstanding balance, due date, status, and payment history.
+Retrieve details about a bill including outstanding balance, due date, settings, status, and payment history.
 
-![Detail](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/detail.jpeg)
+![Detail](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/detail.png)
 
 ### HTTP Request
 
