--- a/source/includes/api/company/_logos.md.erb
+++ b/source/includes/api/company/_logos.md.erb
@@ -10,6 +10,6 @@ The Unbill API provides image URL's for each company's logo. For our most popula
 
     ![TWC](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/twc-logo.png)
 
-3. When the `company.logo.svg` is not available and the `company.logo.background` field is set to `true`, the logo looks best as a background image with the company name overlayed on top.
+3. When the `company.logo.svg` is not available and the `company.logo.background` field is set to `true`, the logo looks best as a background image with the company name overlaid on top.
 
     ![Varsity House](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/varsity-logo.png)
