--- a/source/includes/api/payment/_status.md.erb
+++ b/source/includes/api/payment/_status.md.erb
@@ -4,23 +4,23 @@ A payment method can have one of two statuses. Each type is documented below wit
 
 ### verified
 
-The payment method record on file is verified as a valid payment method. When a `verified` status is returned, no action items are required by your users.
+The payment method on file is verified and eligible to make payments.
 
-### failed
+### declined
 
-A user's payment method can fail to pay a bill for a number of reasons, some including:
+The payment method on file is not eligible to make payments. This may happen for a number of reasons including:
 
 - Insufficient funds
 - Expired card
 - Closed bank account
 
-When a user's payment method fails to pay a bill, we set their payment method status as `failed`. While their status is `failed` no bill payments will be made in behalf of the user. In your apps, if the payment method status is `failed`, we require the user to complete one of two action items:
+When a user's payment method fails to pay a bill, we set their payment method status as `declined`. While their status is `declined` no bill payments will be made in behalf of the user. To address this issue, you may take one of the following courses of action:
 
-1. Add a new payment method.
-2. Retry their payment method.
+1. Link a new payment method via the `/payment/add` endpoint.
+2. Retry the payment method via the `/payment/retry` endpoint.
+
+*Declined payment prompt*
 
 ![Failed Payment](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/failed-payment.png)
 
-To have us retry their payment method again, make a request to the `/payment/retry` endpoint.
-
-If their payment method fails again after a retry, their payment method will be removed and they will have to add another payment method to continue paying bills.
+If their payment method continues to be declined, it will be removed from their account. The user will need to link a new payment method before bill payment services resume.
