--- a/source/includes/api/bill/_status.md.erb
+++ b/source/includes/api/bill/_status.md.erb
@@ -100,7 +100,7 @@ Bill data is not available yet. Most common reason is that the user hasn't recei
 
 ### overdue
 
-The due date for the bill has passed, and no payment has been made. Common reason for an overdue bill are:
+The due date for the bill has passed, and no payment has been made. Common reasons for an overdue bill are:
 
 - A user adds a bill that is already overdue.
 - `autopay` is enabled and the user has no payment method or their payment method's status is `failed`.
