--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -17,6 +17,7 @@ includes:
   - api/company/index
   - api/company/object
   - api/company/logos
+  - api/company/categories
   - api/company/get
   - api/company/search
   - api/payment/index
