--- a/source/includes/api/company/_categories.md.erb
+++ b/source/includes/api/company/_categories.md.erb
@@ -23,6 +23,10 @@
 
 Retrieve a list of company categories you can use to search for companies by category `type`.
 
+### HTTP Request
+
+`POST <%= config.host %>/company/categories`
+
 ### 200 Response Body
 
 Attribute | Description
