Show post params

--- a/source/includes/api/bill/_fix-hold.md.erb
+++ b/source/includes/api/bill/_fix-hold.md.erb
@@ -37,6 +37,13 @@
 
 `POST <%= config.host %>/bill/fix-hold`
 
+### Post Parameters
+
+Param | Description
+----- | -----------
+`userId` | Unbill user ID.
+`companyId` | Unbill company ID.
+
 ### Returns
 
 Returns updated bill detail.
