Remove bill docs

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -14,6 +14,7 @@ includes:
   - api/bill/detail
   - api/bill/overview
   - api/bill/fix-hold
+  - api/bill/remove
   - api/company/index
   - api/company/object
   - api/company/logos
