--- a/source/includes/api/bill/_object.md.erb
+++ b/source/includes/api/bill/_object.md.erb
@@ -6,7 +6,10 @@
 {
   "balance": 100,
   "dueDate": "<%= config.futureDate %>",
-  "status": "upcoming", 
+  "status": {
+    "type": "upcoming",
+    "text": "<%= config.futureStatus %>"
+  },
   "settings": {
     "autoPay": true 
   }
@@ -19,7 +22,9 @@ Attribute | Description
 `dueDate` | Current bill due date.
 `lastPaidAmount` | Amount of last payment.
 `lastPaidOn` | Date of last payment.
-`status` | Status of the bill. Possible values are `syncing`, `overdue`, `authenticate`, `hold`, `upcoming`, `pending`, `paid`.
+`status` | Status of the bill.
+`status.type` | Type of bill status. Possible values are `syncing`, `overdue`, `authenticate`, `hold`, `upcoming`, `pending`, `paid`.
+`status.text` | Helper text that describes the status type. Possible values are `Syncing`, `Tap to fix`, `Due XXX X`, `Overdue`, `Pending`, `Paid`.
 `reason` | Reason the bill is on hold.
 `settings` | Settings for a bill.
 `settings.autopay` | Whether or not payments are scheduled automatically.
