New `not-linked` payment status.

--- a/source/includes/api/payment/_object.md.erb
+++ b/source/includes/api/payment/_object.md.erb
@@ -18,4 +18,4 @@ Attribute | Description
 --------- | -----------
 `card` | Card object
 `bank` | Bank object
-`status` | The status of the payment method on file. Possible values are `verified`, `failed`.
+`status` | The status of the payment method on file. Possible values are `not-linked`, `verified`, `failed`.
