--- a/source/includes/api/payment/_status.md.erb
+++ b/source/includes/api/payment/_status.md.erb
@@ -1,6 +1,10 @@
 ## Payment status
 
-A payment method can have one of two statuses. Each type is documented below with a description of the status and a typical use case.
+A payment method can have one of three statuses. Each type is documented below with a description of the status and a typical use case.
+
+### not-linked
+
+The user has no payment method on file.
 
 ### verified
 
