Show status.image

--- a/source/includes/api/bill/_fix-hold.md.erb
+++ b/source/includes/api/bill/_fix-hold.md.erb
@@ -19,7 +19,8 @@
     "dueDate": "<%= config.futureDate %>",
     "status": {
       "type": "upcoming",
-      "text": "<%= config.futureStatus %>"
+      "text": "<%= config.futureStatus %>",
+      "image": "<%= config.statusSvg %>"
     },
     "settings": {
       "autoPay": true 
