--- a/source/includes/api/bill/_overview.md.erb
+++ b/source/includes/api/bill/_overview.md.erb
@@ -16,7 +16,8 @@
   "bill": {
     "status": {
       "type": "syncing",
-      "text": "Syncing"
+      "text": "Syncing",
+      "image": "<%= config.statusSvg %>"
     }
   },
   "company": {
@@ -32,7 +33,8 @@
     "dueDate": "<%= config.futureDate %>",
     "status": {
       "type": "upcoming",
-      "text": "<%= config.futureStatus %>"
+      "text": "<%= config.futureStatus %>",
+      "image": "<%= config.statusSvg %>"
     }
   },
   "company": {
@@ -48,7 +50,8 @@
     "lastPaidOn": "2016-03-25T00:00:00.000Z",
     "status": {
       "type": "paid",
-      "text": "Paid"
+      "text": "Paid",
+      "image": "<%= config.statusSvg %>"
     }
   },
   "company": {
