--- a/source/includes/api/bill/_object.md.erb
+++ b/source/includes/api/bill/_object.md.erb
@@ -8,7 +8,8 @@
   "dueDate": "<%= config.futureDate %>",
   "status": {
     "type": "upcoming",
-    "text": "<%= config.futureStatus %>"
+    "text": "<%= config.futureStatus %>",
+    "image": "<%= config.statusSvg %>"
   },
   "settings": {
     "autoPay": true 
@@ -25,6 +26,7 @@ Attribute | Description
 `status` | Status of the bill.
 `status.type` | Type of bill status. Possible values are `syncing`, `overdue`, `authenticate`, `hold`, `upcoming`, `pending`, `paid`.
 `status.text` | Helper text that describes the status type. Possible values are `Syncing`, `Tap to fix`, `Due XXX X`, `Overdue`, `Pending`, `Paid`.
+`status.image` | URL of the status svg.
 `reason` | Reason the bill is on hold.
 `settings` | Settings for a bill.
 `settings.autopay` | Whether or not payments are scheduled automatically.
