--- a/source/includes/api/bill/_status.md.erb
+++ b/source/includes/api/bill/_status.md.erb
@@ -171,3 +171,9 @@ The user has an outstanding balance with a future due date.
 The user has no outstanding balance and has a last paid amount on their account.
 
 ![Bill Paid](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/bill-paid.png)
+
+<br>
+
+A bill `status.text` can be used in your bill overview. It is friendly text that describes the `status.type` in more detail. Possible values are `Syncing`, `Tap to fix`, `Due XXX X`, `Overdue`, `Pending`, `Paid`.
+
+A bill `status.image` can be used in your bill overview. It is a URL to a status icon.
