--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -11,6 +11,7 @@ includes:
   - api/bill/index
   - api/bill/object
   - api/bill/status
+  - api/bill/headline
   - api/bill/detail
   - api/bill/overview
   - api/bill/fix-hold
