--- a/source/includes/api/bill/_detail.md.erb
+++ b/source/includes/api/bill/_detail.md.erb
@@ -22,6 +22,10 @@
     }, 
     "settings": {
       "autoPay": true 
+    },
+    "headline": {
+      "title": "$35.23 will be paid on 5/7.",
+      "type": "upcoming"
     }
   },
   "company": {
@@ -47,6 +51,10 @@
     "lastPaidOn": "2016-01-01T00:00:00.000Z",
     "settings": {
       "autoPay": true 
+    },
+    "headline": {
+      "title": "Paid in full.",
+      "type": "paid"
     }
   },
   "company": {
