--- a/source/includes/api/payment/_get.md.erb
+++ b/source/includes/api/payment/_get.md.erb
@@ -29,7 +29,7 @@
 {
   "bank": {
     "routingNumber": "XXXX0002",
-    "accountNumber": "XXXX0021s",
+    "accountNumber": "XXXX0021",
     "type": "checking"
   },
   "status": "verified"
