Include links to bill status images

--- a/source/includes/api/bill/_status.md.erb
+++ b/source/includes/api/bill/_status.md.erb
@@ -177,3 +177,15 @@ The user has no outstanding balance and has a last paid amount on their account.
 A bill `status.text` can be used in your bill overview. It is friendly text that describes the `status.type` in more detail. Possible values are `Syncing`, `Tap to fix`, `Due XXX X`, `Overdue`, `Pending`, `Paid`.
 
 A bill `status.image` can be used in your bill overview. It is a URL to a status icon.
+
+## Bill status images
+
+Below is a list of the images used for a bill's `status.image`.
+
+* [syncing.svg](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/syncing.svg)
+* [overdue.svg](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/overdue.svg)
+* [authenticate.svg](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/authenticate.svg)
+* [hold.svg](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/hold.svg)
+* [upcoming.svg](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/upcoming.svg)
+* [pending.svg](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/pending.svg)
+* [paid.svg](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/paid.svg)
