--- a/source/includes/api/bill/_fix-hold.md.erb
+++ b/source/includes/api/bill/_fix-hold.md.erb
@@ -15,7 +15,7 @@
 ```json
 {
   "bill": {
-    "balance": 100,
+    "balance": "100",
     "dueDate": "<%= config.futureDate %>",
     "status": {
       "type": "upcoming",
