--- a/source/includes/api/bill/_object.md.erb
+++ b/source/includes/api/bill/_object.md.erb
@@ -4,7 +4,7 @@
 
 ```json
 {
-  "balance": 100,
+  "balance": "100",
   "dueDate": "<%= config.futureDate %>",
   "status": {
     "type": "upcoming",
