--- a/source/includes/api/bill/_overview.md.erb
+++ b/source/includes/api/bill/_overview.md.erb
@@ -29,7 +29,7 @@
   }
 }, {
   "bill": {
-    "balance": 100,
+    "balance": "100",
     "dueDate": "<%= config.futureDate %>",
     "status": {
       "type": "upcoming",
@@ -46,7 +46,7 @@
   }
 }, {
   "bill": {
-    "lastPaidAmount": 25,
+    "lastPaidAmount": "25",
     "lastPaidOn": "2016-03-25T00:00:00.000Z",
     "status": {
       "type": "paid",
