--- a/source/includes/api/payment/_add.md.erb
+++ b/source/includes/api/payment/_add.md.erb
@@ -53,7 +53,7 @@ Param | Description
 `zipcode` | Credit card zipcode
 `routingNumber` | Bank routing number
 `accountNumber` | Bank account number
-`accountType` | Type of bank account `credit, savings`.
+`accountType` | Type of bank account `checking, savings`.
 
 ### Returns
 
