Include Sandbox URL

--- a/source/includes/_introduction.md.erb
+++ b/source/includes/_introduction.md.erb
@@ -5,7 +5,8 @@
 > API Host
 
 ```
-<%= config.host %>
+https://sandbox.unbill.co/partner/v2 (development)
+<%= config.host %> (production)
 ```
 
 > Resource URL Patterns
