Autopay fixes and zero-balance addition

--- a/source/includes/api/bill/_detail.md.erb
+++ b/source/includes/api/bill/_detail.md.erb
@@ -21,7 +21,7 @@
       "type": "upcoming"
     }, 
     "settings": {
-      "autoPay": true 
+      "autopay": true 
     },
     "headline": {
       "title": "$35.23 will be paid on 5/7.",
@@ -51,7 +51,7 @@
     "lastPaidAmount": "100",
     "lastPaidOn": "2016-01-01T00:00:00.000Z",
     "settings": {
-      "autoPay": true 
+      "autopay": true 
     },
     "headline": {
       "title": "Paid in full.",
