--- a/source/includes/api/bill/_fix-hold.md.erb
+++ b/source/includes/api/bill/_fix-hold.md.erb
@@ -23,7 +23,7 @@
       "image": "<%= config.statusSvg %>"
     },
     "settings": {
-      "autoPay": true 
+      "autopay": true 
     }
   },
   "company": {
