Fixed zero balance image

--- a/source/includes/api/bill/_status.md.erb
+++ b/source/includes/api/bill/_status.md.erb
@@ -145,7 +145,7 @@ Our system is currently retrieving data.
 
 Bill data is not available yet. Most common reason is that the user hasn't received a bill. (change image)
 
-![Bill Syncing](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/bill-syncing.png)
+![Bill Zero Balance](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/bill-zero-balance.png)
 
 ### overdue
 
@@ -204,6 +204,7 @@ A bill `status.image` can be used in your bill overview. It is a URL to a status
 Below is a list of the images used for a bill's `status.image`.
 
 * [syncing.svg](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/syncing.svg)
+* [zero-balance.svg](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/zero-balance.svg)
 * [overdue.svg](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/overdue.svg)
 * [authenticate.svg](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/authenticate.svg)
 * [hold.svg](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/hold.svg)
