--- a/source/includes/api/bill/_detail.md.erb
+++ b/source/includes/api/bill/_detail.md.erb
@@ -86,7 +86,7 @@
 
 Retrieve details about a bill including outstanding balance, due date, settings, status, and payment history.
 
-![Detail](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/detail.png)
+![Detail](<%= config.s3 %>/detail.png)
 
 ### HTTP Request
 
