--- a/source/includes/api/bill/_headline.md.erb
+++ b/source/includes/api/bill/_headline.md.erb
@@ -20,7 +20,7 @@
 
 A bill `headline` is a quick glance at the current state of a bill. It is available within the bill detail.
 
-![Bill Headline](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/bill-headline.png)
+![Bill Headline](<%= config.s3 %>/bill-headline.png)
 
 Each headline includes a `title`, `type`, optional `subtitle`, and optional action `buttons` as documented below.
 
@@ -36,7 +36,7 @@ The `type` describes the type of headline and is similar to the status of a bill
 
 The `subtitle` is additional helper text to more fully describe the state of the bill.
 
-![Bill Subtitle](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/bill-headline-subtitle.png)
+![Bill Subtitle](<%= config.s3 %>/bill-headline-subtitle.png)
 
 ### buttons
 
