--- a/source/includes/api/bill/_overview.md.erb
+++ b/source/includes/api/bill/_overview.md.erb
@@ -77,7 +77,7 @@
 
 Retrieves a list of user's bills.
 
-![Overview](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/overview.png)
+![Overview](<%= config.s3 %>/overview.png)
 
 ### HTTP Request
 
