--- a/source/includes/api/company/_search.md.erb
+++ b/source/includes/api/company/_search.md.erb
@@ -42,7 +42,7 @@
 
 Search for companies by name, category, or geo.
 
-![Company Categories](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/company-categories.png)
+![Company Categories](<%= config.s3 %>/company-categories.png)
 
 ### HTTP Request
 
