--- a/source/includes/api/payment/_status.md.erb
+++ b/source/includes/api/payment/_status.md.erb
@@ -25,6 +25,6 @@ When a user's payment method fails to pay a bill, we set their payment method st
 
 *Declined payment prompt*
 
-![Failed Payment](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/failed-payment.png)
+![Failed Payment](<%= config.s3 %>/failed-payment.png)
 
 If their payment method continues to be declined, it will be removed from their account. The user will need to link a new payment method before bill payment services resume.
