--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -5,6 +5,7 @@ includes:
   - introduction
   - authentication
   - getting-started
+  - resources
   - api/auth/index
   - api/auth/auth
   - api/auth/auth-step
