--- a/source/includes/api/company/_logos.md.erb
+++ b/source/includes/api/company/_logos.md.erb
@@ -4,12 +4,12 @@ The Unbill API provides image URL's for each company's logo. For our most popula
 
 1. When the `company.logo.svg` is available, the svg logo looks best on the `company.logo.svg.color` background.
 
-	![Netflix](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/netflix-svg-logo.png)
+	![Netflix](<%= config.s3 %>/netflix-svg-logo.png)
 
 2. When the `company.logo.svg` is not available and the `company.logo.background` field is set to `false`, the logo looks best on a white background.
 
-    ![TWC](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/twc-logo.png)
+    ![TWC](<%= config.s3 %>/twc-logo.png)
 
 3. When the `company.logo.svg` is not available and the `company.logo.background` field is set to `true`, the logo looks best as a background image with the company name overlaid on top.
 
-    ![Varsity House](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/varsity-logo.png)
+    ![Varsity House](<%= config.s3 %>/varsity-logo.png)
