--- a/source/includes/_resources.md.erb
+++ b/source/includes/_resources.md.erb
@@ -7,7 +7,7 @@ All open source libraries and sample apps for Unbill are listed below. If you've
 ## Official Libraries
 
 <div class="resources">
-	<a href="https://github.com/unbill/unbill-node" target="_blank" class="resource">
+	<a id="unbill-node" href="https://github.com/unbill/unbill-node" target="_blank" class="resource">
 		<img src="<%= config.s3 %>/node.svg" />
 		<div class="content">
 			<h3>Node</h3>
@@ -19,7 +19,7 @@ All open source libraries and sample apps for Unbill are listed below. If you've
 ## Official Apps
 
 <div class="resources">
-	<a href="https://github.com/unbill/unbill-ionic" target="_blank" class="resource">
+	<a id="unbill-ionic" href="https://github.com/unbill/unbill-ionic" target="_blank" class="resource">
 		<img src="<%= config.s3 %>/ionic.png" />
 		<div class="content">
 			<h3>Ionic</h3>
